--- a/jogo-alfabeto/index.html
+++ b/jogo-alfabeto/index.html
@@ -12,7 +12,7 @@
             <h1>🎮 EduGames Brasil - Alfabeto 🎮</h1>
             <p>Clique nas letras para ouvir e aprender!</p>
             <div class="game-nav">
-                <button onclick="window.location.href='../index.html#age-selection'" class="nav-btn">🏠 Início</button>
+                <button onclick="window.location.href='../index.html'" class="nav-btn">🏠 Início</button>
                 <button onclick="window.location.href='../jogo-numeros/index.html'" class="nav-btn">🔢 Números</button>
             </div>
         </header>
