--- a/jogo-numeros/index.html
+++ b/jogo-numeros/index.html
@@ -12,7 +12,7 @@
             <h1>🔢 EduGames Brasil - Números 🔢</h1>
             <p>Aprenda matemática de forma divertida!</p>
             <div class="game-nav">
-                <button onclick="window.location.href='../index.html#age-selection'" class="nav-btn">🏠 Início</button>
+                <button onclick="window.location.href='../index.html'" class="nav-btn">🏠 Início</button>
                 <button onclick="window.location.href='../jogo-alfabeto/index.html'" class="nav-btn">🔤 Alfabeto</button>
             </div>
         </header>
